--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="purple_200">#FFBB86FC</color>
-	<color name="purple_500">#FF6200EE</color>
-	<color name="purple_700">#FF3700B3</color>
-	<color name="teal_200">#FF03DAC5</color>
-	<color name="teal_700">#FF018786</color>
-	<color name="black">#FF000000</color>
-	<color name="white">#FFFFFFFF</color>
+	<color name="colorPrimary">#1498d5</color>
+	<color name="colorPrimaryDark">#f0f0f0</color>
+	<color name="colorAccent">#1498d5</color>
+
+	<color name="backgroundPrimary">@color/colorWhite</color>
+	<color name="backgroundMenu">#666666</color>
+	<color name="backgroundIcons">@color/colorWhite</color>
+	<color name="backgroundButtonDialog">@color/colorGray</color>
+
+	<color name="textColor">@color/colorDark</color>
+
+	<color name="colorWhite">#f0f0f0</color>
+	<color name="colorDark">#454749</color>
+	<color name="colorGray">#686868</color>
+
+	<color name="hintColor">@color/colorWhite</color>
 </resources>
