--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 	<!-- Base application theme. -->
-	<style name="Theme.SuperHero" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-		<!-- Primary brand color. -->
-		<item name="colorPrimary">@color/purple_500</item>
-		<item name="colorPrimaryVariant">@color/purple_700</item>
-		<item name="colorOnPrimary">@color/white</item>
-		<!-- Secondary brand color. -->
-		<item name="colorSecondary">@color/teal_200</item>
-		<item name="colorSecondaryVariant">@color/teal_700</item>
-		<item name="colorOnSecondary">@color/black</item>
-		<!-- Status bar color. -->
-		<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+	<style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
 		<!-- Customize your theme here. -->
+		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimaryDark">@color/backgroundPrimary</item>
+		<item name="colorAccent">@color/colorAccent</item>
+		<item name="colorSecondaryContainer">@color/colorPrimary</item>
+		<item name="colorOnSecondaryContainer">@color/colorWhite</item>
+	</style>
+
+	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
+
+	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
+
+	<style name="AppTheme.Overlay" parent="ThemeOverlay.MaterialComponents.Dark" />
+
+	<style name="RippleEffect" parent="@style/AppTheme">
+		<item name="android:background">?attr/selectableItemBackground</item>
+		<item name="android:foreground">?attr/selectableItemBackground</item>
+		<item name="android:clickable">true</item>
+		<item name="android:selectable">true</item>
+		<item name="android:focusable">true</item>
+	</style>
+
+	<style name="RippleEffect.Circular" parent="@style/AppTheme">
+		<item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+		<item name="android:clickable">true</item>
+		<item name="android:selectable">true</item>
+		<item name="android:focusable">true</item>
+	</style>
+
+	<style name="Style.CoordinatorLayout" parent="@style/AppTheme">
+		<item name="colorPrimary">@color/colorWhite</item>
+	</style>
+
+	<style name="Style.CardView" parent="@style/AppTheme">
+		<item name="cardElevation">@dimen/elevationCardView</item>
+		<item name="cardCornerRadius">@dimen/cornerCardView</item>
+	</style>
+
+	<style name="Style.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+		<item name="android:layout_marginStart">@dimen/marginSize</item>
+		<item name="android:layout_marginEnd">@dimen/marginSize</item>
+	</style>
+
+	<style name="Style.TextInputEditText" parent="@style/AppTheme">
+		<item name="android:lines">1</item>
+		<item name="android:textColor">@color/textColor</item>
+		<item name="hintTextColor">@color/hintColor</item>
+	</style>
+
+	<style name="Style.Button.Borderless" parent="Widget.AppCompat.Button.Borderless">
+		<item name="android:textSize">14sp</item>
+		<item name="android:textColor">@color/backgroundButtonDialog</item>
+		<item name="android:textAllCaps">false</item>
+		<item name="android:clickable">true</item>
+		<item name="android:selectable">true</item>
+		<item name="android:focusable">true</item>
 	</style>
 </resources>
