--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context=".MainActivity">
+	android:layout_height="wrap_content"
+	android:orientation="vertical">
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+	<include
+		android:id="@+id/layoutToolbar"
+		layout="@layout/toolbar_activity" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+	<RelativeLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:background="@color/backgroundPrimary">
+
+			<androidx.coordinatorlayout.widget.CoordinatorLayout
+				android:id="@+id/coordinatorLayout"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:background="@color/backgroundPrimary"
+				android:theme="@style/Style.CoordinatorLayout">
+
+				<androidx.fragment.app.FragmentContainerView
+					android:id="@+id/navHostFragment"
+					android:name="androidx.navigation.fragment.NavHostFragment"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					app:defaultNavHost="true"
+					app:navGraph="@navigation/mobile_navigation" />
+
+			</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+		</RelativeLayout>
+
+	</RelativeLayout>
+
+</LinearLayout>
