--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,13 @@
 
 		</RelativeLayout>
 
+		<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+			android:id="@+id/fab"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:contentDescription="@string/titleAppName"
+			style="@style/Style.FloatingActionButton.Search" />
+
 	</RelativeLayout>
 
 </LinearLayout>
