--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -91,10 +91,10 @@
                 android:id="@+id/btnRegistrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/titleRegistrar"
+                android:text="@string/titleRegister"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/textSizeNormal"
-                android:onClick="@{viewModel::registrar}"
+                android:onClick="@{viewModel::register}"
                 android:textAllCaps="false"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
