--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,8 @@
     <dimen name="cornerCardView">8dp</dimen>
     <dimen name="cornerButton">5dp</dimen>
 
+    <dimen name="layoutItemHeight">350dp</dimen>
+    <dimen name="layoutItemHeaderSize">60dp</dimen>
     <dimen name="dialogWidthSize">350dp</dimen>
     <dimen name="marginSize">15dp</dimen>
 </resources>
