--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
 		<RelativeLayout
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
+			android:layout_above="@id/bottomNavigationView"
 			android:background="@color/backgroundPrimary">
 
 			<androidx.coordinatorlayout.widget.CoordinatorLayout
