--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,40 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+	android:orientation="vertical"
+	android:background="@color/backgroundPrimary">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/refreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+	<include
+		android:id="@+id/layoutStart"
+		layout="@layout/layout_start_search" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/backgroundPrimary">
+	<include
+		android:id="@+id/layoutEmpty"
+		layout="@layout/layout_empty_results" />
 
-            <include
-                android:id="@+id/layoutStart"
-                layout="@layout/layout_start_search" />
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/recyclerView"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:scrollbars="vertical"
+		android:paddingStart="12dp"
+		android:paddingEnd="12dp"
+		tools:listitem="@layout/item_search"
+		style="@style/Style.RecyclerView" />
 
-            <include
-                android:id="@+id/layoutEmpty"
-                layout="@layout/layout_empty_results" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                tools:listitem="@layout/item_search"
-                style="@style/Style.RecyclerView" />
-
-        </LinearLayout>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-</RelativeLayout>
+</LinearLayout>
