--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="75dp"
+	android:layout_height="120dp"
 	android:layout_marginTop="10dp"
 	android:layout_marginStart="10dp"
 	android:layout_marginEnd="10dp"
@@ -16,18 +16,26 @@
 		android:layout_height="match_parent"
 		style="@style/RippleEffect">
 
-		<de.hdodenhof.circleimageview.CircleImageView
-			android:id="@+id/ivImage"
-			android:layout_width="90dp"
+		<LinearLayout
+			android:id="@+id/containerImage"
+			android:layout_width="120dp"
 			android:layout_height="match_parent"
-			android:src="@color/colorPrimary"
-			android:padding="5dp"
-			style="@style/RippleEffect.Circular" />
+			style="@style/RippleEffect.Circular">
+
+			<de.hdodenhof.circleimageview.CircleImageView
+				android:id="@+id/ivImage"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@color/colorPrimary"
+				android:padding="10dp"
+				style="@style/RippleEffect.Circular" />
+
+		</LinearLayout>
 
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:layout_toEndOf="@id/ivImage"
+			android:layout_toEndOf="@id/containerImage"
 			android:orientation="vertical">
 
 			<TextView
