--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -6,6 +6,10 @@
     android:orientation="vertical"
     android:background="@color/backgroundPrimary">
 
+    <include
+        android:id="@+id/layoutStart"
+        layout="@layout/layout_start_history" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
@@ -13,7 +17,7 @@
         android:scrollbars="vertical"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
-        tools:listitem="@layout/item_search"
+        tools:listitem="@layout/item_history"
         style="@style/Style.RecyclerView" />
 
 </LinearLayout>
