--- a/app/src/main/res/layout/layout_start_history.xml
+++ b/app/src/main/res/layout/layout_start_history.xml
@@ -19,7 +19,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/textEnterSearch"
+        android:text="@string/textHistory"
         android:textColor="@color/textColor"
         android:textSize="24sp"
         android:layout_margin="10dp" />
