--- a/app/src/main/res/layout/activity_super_hero.xml
+++ b/app/src/main/res/layout/activity_super_hero.xml
@@ -5,16 +5,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/titleAppName"
-        android:textColor="@color/textColor"
-        android:textSize="@dimen/textSizeNormal"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:layout_margin="10dp" />
+    <include
+        android:id="@+id/layoutToolbar"
+        layout="@layout/toolbar_activity" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/ivImage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@color/colorPrimary"
+        android:padding="10dp"
+        android:layout_margin="5dp"
+        android:layout_gravity="center"
+        style="@style/RippleEffect.Circular" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
