--- a/app/src/main/res/layout/layout_start_history.xml
+++ b/app/src/main/res/layout/layout_start_history.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginBottom="10dp"
         android:contentDescription="@string/titleAppName"
-        app:srcCompat="@drawable/background_search" />
+        app:srcCompat="@drawable/background" />
 
     <TextView
         android:layout_width="wrap_content"
